--- a/metadata.yml
+++ b/metadata.yml
@@ -1,13 +1,13 @@
 --- !ruby/object:Gem::Specification 
 name: vagrant
 version: !ruby/object:Gem::Version 
-  hash: 61
+  hash: 49
   prerelease: 
   segments: 
   - 0
   - 9
-  - 3
-  version: 0.9.3
+  - 5
+  version: 0.9.5
 platform: ruby
 authors: 
 - Mitchell Hashimoto
@@ -16,7 +16,7 @@ autorequire:
 bindir: bin
 cert_chain: []
 
-date: 2012-01-24 00:00:00 Z
+date: 2012-02-05 00:00:00 Z
 dependencies: 
 - !ruby/object:Gem::Dependency 
   version_requirements: &id001 !ruby/object:Gem::Requirement 
@@ -304,6 +304,7 @@ files:
 - lib/vagrant/action/vm/clear_network_interfaces.rb
 - lib/vagrant/action/vm/clear_shared_folders.rb
 - lib/vagrant/action/vm/customize.rb
+- lib/vagrant/action/vm/default_name.rb
 - lib/vagrant/action/vm/destroy.rb
 - lib/vagrant/action/vm/destroy_unused_network_interfaces.rb
 - lib/vagrant/action/vm/discard_state.rb
@@ -441,6 +442,7 @@ files:
 - templates/guests/redhat/network_static.erb
 - templates/locales/en.yml
 - templates/nfs/exports.erb
+- templates/nfs/exports_freebsd.erb
 - templates/nfs/exports_linux.erb
 - templates/package_Vagrantfile.erb
 - templates/provisioners/chef_client/client.erb
