--- a/metadata.yml
+++ b/metadata.yml
@@ -1,13 +1,13 @@
 --- !ruby/object:Gem::Specification 
 name: vagrant
 version: !ruby/object:Gem::Version 
-  hash: 49
+  hash: 53
   prerelease: 
   segments: 
   - 0
   - 9
-  - 5
-  version: 0.9.5
+  - 7
+  version: 0.9.7
 platform: ruby
 authors: 
 - Mitchell Hashimoto
@@ -16,7 +16,7 @@ autorequire:
 bindir: bin
 cert_chain: []
 
-date: 2012-02-05 00:00:00 Z
+date: 2012-02-09 00:00:00 Z
 dependencies: 
 - !ruby/object:Gem::Dependency 
   version_requirements: &id001 !ruby/object:Gem::Requirement 
@@ -40,12 +40,12 @@ dependencies:
     requirements: 
     - - ~>
       - !ruby/object:Gem::Version 
-        hash: 19
+        hash: 17
         segments: 
         - 0
         - 3
-        - 0
-        version: 0.3.0
+        - 1
+        version: 0.3.1
   name: childprocess
   type: :runtime
   prerelease: false
@@ -395,6 +395,7 @@ files:
 - lib/vagrant/hosts/bsd.rb
 - lib/vagrant/hosts/fedora.rb
 - lib/vagrant/hosts/freebsd.rb
+- lib/vagrant/hosts/gentoo.rb
 - lib/vagrant/hosts/linux.rb
 - lib/vagrant/hosts/windows.rb
 - lib/vagrant/plugin.rb
