--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Depends: ruby-erubis (>= 2.7.0),
          ruby-log4r (>= 1.1.9),
          ruby-net-scp (>= 1.0.4),
          ruby-net-ssh (>= 2.2.2),
-         rubygems,
+         rubygems (>= 1.3.6),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: virtualbox (>= 4.0)
