--- a/debian/control
+++ b/debian/control
@@ -14,13 +14,12 @@ Architecture: all
 XB-Ruby-Versions: ${ruby:Versions}
 Depends: ruby-erubis (>= 2.7.0),
          ruby | ruby-interpreter,
-         ruby-archive-tar-minitar,
-         ruby-childprocess (>= 0.3.1),
+         ruby-childprocess (>= 0.3.7),
          ruby-i18n (>= 0.6.0),
-         ruby-json (>= 1.5.1),
+         ruby-json (>= 1.5.1), ruby-json (<< 1.8.0),
          ruby-log4r (>= 1.1.9),
-         ruby-net-scp (>= 1.0.4),
-         ruby-net-ssh (>= 2.2.2),
+         ruby-net-scp (>= 1.1.0),
+         ruby-net-ssh (>= 1:2.6.6),
          rubygems (>= 1.3.6),
          ${misc:Depends},
          ${shlibs:Depends}
