--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.4
 Vcs-Git: git://anonscm.debian.org/collab-maint/vagrant.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/vagrant.git;a=summary
 Homepage: http://vagrantup.com/
-XS-Ruby-Versions: all
+XS-Ruby-Versions: ruby1.9.1
 
 Package: vagrant
 Architecture: all
@@ -16,14 +16,12 @@ Depends: bsdtar,
          curl,
          openssh-client,
          ruby-erubis (>= 2.7.0),
-         ruby | ruby-interpreter,
+         ruby1.9.1,
          ruby-childprocess (>= 0.3.7),
          ruby-i18n (>= 0.6.0),
-         ruby-json (>= 1.5.1), ruby-json (<< 1.8.0),
          ruby-log4r (>= 1.1.9),
          ruby-net-scp (>= 1.1.0),
          ruby-net-ssh (>= 1:2.6.6),
-         rubygems (>= 1.3.6),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: virtualbox (>= 4.0)
