--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: vagrant
 Section: admin
 Priority: optional
 Maintainer: Laurent Bigonville <bigon@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.2.13~), bash-completion
+Build-Depends: bash-completion, debhelper (>= 7.0.50~), gem2deb (>= 0.2.13~)
 Standards-Version: 3.9.4
 Vcs-Git: git://anonscm.debian.org/collab-maint/vagrant.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/vagrant.git;a=summary
@@ -15,13 +15,13 @@ XB-Ruby-Versions: ${ruby:Versions}
 Depends: bsdtar,
          curl,
          openssh-client,
-         ruby-erubis (>= 2.7.0),
-         ruby1.9.1,
          ruby-childprocess (>= 0.3.7),
+         ruby-erubis (>= 2.7.0),
          ruby-i18n (>= 0.6.0),
          ruby-log4r (>= 1.1.9),
          ruby-net-scp (>= 1.1.0),
          ruby-net-ssh (>= 1:2.6.6),
+         ruby1.9.1,
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: virtualbox (>= 4.0)
